--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,13 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .container {
-    text-align: center;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .task {
-    display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 p, i {
-    padding: 5px;
+  padding: 5px;
+  margin-bottom: 0px;
 }
