--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,8 @@
-<h2><%= @task.title %></h1>
-<p><%= @task.details %></p>
-<p><%= @task.completed %></p>
-
-<%= link_to 'Back to tasks', tasks_path  %> <br>
-<%= link_to "Edit this task", edit_task_path  %> <br>
-<%= link_to 'Delete this task', task_path(@task), method: :delete, data: {confirm: 'are you sure?'} %>
+<div class="container">
+  <h2><%= @task.title %></h1>
+  <p><%= @task.details %></p>
+  
+  <%= link_to 'Back to tasks', tasks_path  %> <br>
+  <%= link_to "Edit this task", edit_task_path  %> <br>
+  <%= link_to 'Delete this task', task_path(@task), method: :delete, data: {confirm: 'are you sure?'} %>
+</div>
